tree-sitter-comp0012/corpus/negative/array.txt
=================================
Array slice missing closing bracket
=================================

a[1:3;

---

(source_file
  (array_operation
    (identifier)
    (arithmetic_exp
      (num))
    (arithmetic_exp
      (num))
        (MISSING "]")))

===========================
Array slice too many colons
===========================

a[1:2:3:4];

---

(source_file
  (array_operation
    (identifier)
    (arithmetic_exp
      (num))
    (arithmetic_exp
      (num))
    (ERROR
      (arithmetic_exp
        (num)))
    (arithmetic_exp
      (num))))

==============================
Array slice malformed separator
==============================

a[:,:];

---

(source_file
  (array_operation
    (identifier)
    (ERROR)))
