tree-sitter-comp0012/corpus/negative/class.txt
================================================================================
Class header missing name
================================================================================

class { int x = 1; }

--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (block
    (declare
      (typed_declare
        (type)
        (identifier)
        (arithmetic_exp
          (num))))))

================================================================================
Class extends missing superclass
================================================================================

class A extends { }

--------------------------------------------------------------------------------

(source_file
  (class_declare
    (identifier)
    (ERROR)))

================================================================================
Class parameter list malformed
================================================================================

class A(,) { }

--------------------------------------------------------------------------------

(source_file
  (class_declare
    (identifier)
    (parameter_list
      (ERROR))))

================================================================================
Class field missing semicolon
================================================================================

class A { int x = 1 }

--------------------------------------------------------------------------------

(source_file
  (class_declare
    (identifier)
    (ERROR
      (declare
        (typed_declare
          (type)
          (identifier)
          (arithmetic_exp
            (num)))))))
