tree-sitter-comp0012/corpus/negative/comments.txt
====================
Single line comments
====================

/Not a comment

--- 
(source_file
   (ERROR
         (UNEXPECTED 'N'))
      (identifier)
      (identifier)
      (identifier))
   (ERROR))

====================
Block comments Open
====================

/Wren Language*/

---
(source_file
   (ERROR
      (identifier)
        (arithmetic_exp
          (identifier))))

====================
Block comments Close
====================

/* Wren language
/

---
(source_file
   (ERROR
      (identifier)
        (arithmetic_exp
          (identifier))))
