tree-sitter-comp0012/corpus/negative/declaration.txt
================================================================================
Typed declaration missing initializer
================================================================================

int x = ;

--------------------------------------------------------------------------------

(source_file
  (declare
    (typed_declare
      (type)
      (identifier)
      (bool_exp
        (MISSING identifier)))))

================================================================================
Typed declaration missing identifier
================================================================================

int = 1;

--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (arithmetic_exp
    (num)))

================================================================================
Array declaration missing identifier
================================================================================

int[] = [1,2];

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (num)
    (num)))

================================================================================
Array initializer trailing comma
================================================================================

int[] a = [1,];

--------------------------------------------------------------------------------

(source_file
  (declare
    (array_declare
      (int_array_declare
        (identifier)
        (arithmetic_exp
          (num))
        (ERROR)))))

================================================================================
Boolean array initializer trailing comma
================================================================================

boolean[] q = [true,false,];

--------------------------------------------------------------------------------

(source_file
  (declare
    (array_declare
      (bool_array_declare
        (identifier)
        (bool_exp
          (bool))
        (bool_exp
          (bool))
        (bool_exp
          (MISSING identifier))))))
