tree-sitter-comp0012/corpus/negative/method_calls.txt
====================
No-close method call
====================

System.print(

---

(source_file
    (ERROR
        (identifier)
        (identifier)))

==========================
No-parenthesis method call
==========================

System.print "Hello!"

---

(source_file
    (ERROR
        (identifier)
        (identifier)
        (string)))
