tree-sitter-comp0012/corpus/positive/array.txt
========================
Array operation (slicing)
========================

xs[1];
xs[:];
xs[1:3];
xs[1:10:2];
xs[::2];

---

(source_file
  (array_operation
    (identifier)
    (arithmetic_exp
      (num)))
  (array_operation
    (identifier))
  (array_operation
    (identifier)
    (arithmetic_exp
      (num))
    (arithmetic_exp
      (num)))
  (array_operation
    (identifier)
    (arithmetic_exp
      (num))
    (arithmetic_exp
      (num))
    (arithmetic_exp
      (num)))
  (array_operation
    (identifier)
    (arithmetic_exp
      (num))))
