tree-sitter-comp0012/corpus/positive/literals.txt
==============
Numbers (nums)
==============

0;
123;
12345678901;
034;

---

(source_file
  (arithmetic_exp (num))
  (arithmetic_exp (num))
  (arithmetic_exp (num))
  (arithmetic_exp (num)))

=======
Strings
=======

"hello";
"goodbye";
"simple";

---

(source_file
  (string)
  (string)
  (string))

===============
Booleans (bool)
===============

true;
false;
!true;
(x && false);

---

(source_file
  (bool_exp (bool))
  (bool_exp (bool))
  (bool_exp
    (unary_bool
      (bool_exp (bool))))
  (bool_exp
    (parenthesis_bool
      (bool_exp
        (binary_bool
          (bool_exp (identifier))
          (bool_exp (bool)))))))
