tree-sitter-comp0012/corpus/positive/statements.txt
==============
Numbers (nums)
==============

0;
123;
12345678901;
034;

---

(source_file
      (arithmetic_exp
        (num))
      (arithmetic_exp
        (num))
      (arithmetic_exp
        (num))
      (arithmetic_exp
        (num)))

=======
Strings
=======

"hello";
"goodbye";
"simple";

---

(source_file 
      (string)
      (string)
      (string))

===============
Booleans (bool)
===============

true;
false;

---

(source_file
      (bool_exp
        (bool))
      (bool_exp
        (bool)))

===========
Assignments
===========

string color = "yellow";
boolean is_valid = true;
int dozen = 12;
int zero = 0;
boolean negate = false;

---

(source_file
      (declare
        (typed_declare
          (type)
          (identifier)
          (string)))
      (declare
        (typed_declare
          (type)
          (identifier)
          (bool_exp
            (bool))))
      (declare
        (typed_declare
          (type)
          (identifier)
          (arithmetic_exp
            (num))))
      (declare
        (typed_declare
          (type)
          (identifier)
          (arithmetic_exp
            (num))))
      (declare
        (typed_declare
          (type)
          (identifier)
          (bool_exp
            (bool)))))
